# sdg

./: config.env  data_insight_identifying.py  pyproject.toml
sdg/: config.py  db.py  main.py  poc.py
sdg/data_operator/: __init__.py  model.py  operator.py  python_operator.py  router.py
sdg/project/: model.py  router.py
sdg/storage/: dataset.py  model.py  router.py
sdg/task/: model.py  task.py
